finally working on chapter 6. started at the beginning

--- a/preamble.sty
+++ b/preamble.sty
@@ -200,6 +200,9 @@
 % generic category
 \newcommand{\gcat}[1][n,r]{\mathcal{G}(#1)}
 
+% transpose involution on the generic algebra
+\newcommand{\antipode}[1]{S{#1}}
+
 % -------------------------------------------- %
 %				TITLE PAGE						 %
 % -------------------------------------------- %
