--- a/report.tex
+++ b/report.tex
@@ -454,8 +454,6 @@ e_A R = e_{A[-1]}.
 
 As a visual cue, acting on a basis element $e_A$ on the left by $R$ corresponds to moving the matrix $A$ up by the row, while acting on the right by $R$ corresponds to moving the matrix to the right by one column. Then conjugating by $R$ corresponds to the composition of a shift to the left by one and a shift up by one, which is a shift by one along the diagonal, so conjugating by $R^n$ leaves $e_A$ invariant. Thus conjugation by $R$ gives a $\integers[q]$-algebra automorphism of $\qschur$ which has order $n$.
 
-{\color{blue}Although I can't be sure, I suspect that conjugation by $R$ gives a realisation of the Auslander-Reiten translation on the nilpotent representations of a cyclic quiver determined by the upper triangular matrices in $\matrices$. This is at least plausible since the A.R translation $\tau$ sends the simple representation at vertex $i$ to the simple representation at vertex $i-1$, which is consistent with the conjugation by $R$, which sends $E_i$ to $E_{i-1}$.}
-
 \begin{lemma}\label{lemma:R-is-a-unit}
 The element $R$ is invertible and
 \begin{equation*}
@@ -473,7 +471,37 @@ TYPE THIS PROOF.
 }
 \end{proof}
 
+For $\lambda\in\compositions$ and $m\in\integers$, let $[m]\lambda$ be the element in $\compositions$ given by
+\begin{equation*}
+([m]\lambda)_i = \lambda_{i+m},
+\end{equation*}
+for each $i\in\integers$, where the indices of $\lambda$ are taken modulo $n$.
 
+For example, if $\lambda = (2,1,3)$, then $[1]\lambda = (1,3,2)$.
+
+\begin{lemma}\label{lemma:conjugation-by-R}
+For each $\lambda\in\compositions$,
+\begin{equation*}
+R 1_\lambda \antipode{(R)} = 1_{[1]\lambda}
+\end{equation*}
+and, for each $i\in\{1,\ldots,n\}$,
+\begin{equation*}
+R E_i \antipode{(R)} = E_{i-1}
+\end{equation*}
+and
+\begin{equation*}
+R F_i \antipode{(R)} = F_{i-1}.
+\end{equation*}
+\end{lemma}
+
+\begin{proof}
+{\color{blue}
+TYPE THIS PROOF.}
+\end{proof}
+
+{\color{blue}Although I can't be sure, I suspect that conjugation by $R$ gives a realisation of the Auslander-Reiten translation on the nilpotent representations of a cyclic quiver determined by the upper triangular matrices in $\matrices$. This is at least plausible since the A.R translation $\tau$ sends the simple representation at vertex $i$ to the simple representation at vertex $i-1$, which is consistent with the conjugation by $R$, which sends $E_i$ to $E_{i-1}$.}
+
+{\color{gray}
 \section{Relations}
 
 Note that $E_i^{r+1}=F_i^{r+1}=0$ while
@@ -543,24 +571,6 @@ $[E_i, F_j] = 0$ unless $j=i$.
 E_i F_i - F_i E_i = \sum_{\lambda\in\compositions} ([\lambda_i] - [\lambda_{i+1}])1_\lambda.
 \end{equation*}
 \end{lemma}
-
-\begin{lemma}\label{lemma:relations-for-R}
-{\color{blue}The element $R$ satisfies the following relations:
-\begin{equation*}
-R\antipode{R} = 1 = \antipode{R}R,
-\end{equation*}
-\begin{equation*}
-R E_i \antipode{R} = E_{i-1},
-\end{equation*}
-\begin{equation*}
-R F_i \antipode{R} = F_{i-1}.
-\end{equation*}
-}
-\end{lemma}
-
-\begin{proof}
-{\color{blue}COMPLETE THIS.}
-\end{proof}
 
 
 \section{quivers with relations}
@@ -644,7 +654,7 @@ given by
 \phi(k_\lambda) = 1_\lambda.
 \end{equation*}
 \end{lemma}
-
+}
 
 \chapter{A generic affine algebra}
 
@@ -1631,7 +1641,7 @@ p=\min\{i\in\integers:a_{i,j}>0\}.
 
 If $\lambda_{j+1}=0$ then $e_A\ast F_j=0$. If $\lambda_{j+1}>0$ then
 \begin{equation*}
-e_A F_j = e_{A+\elem{q}{j}-\elem{q}{j+1}},
+e_A\ast F_j = e_{A+\elem{q}{j}-\elem{q}{j+1}},
 \end{equation*}
 where
 \begin{equation*}
@@ -1667,12 +1677,25 @@ Lemma \ref{lemma:transpose-preserves-order} show that the transpose preserves th
 using Lemma \ref{lemma:transpose-involution}.
 \end{proof}
 
-Moreover,
-\begin{align*}
-\antipode{(E_{i,\lambda})} &= F_{i,\lambda+\alpha_i},\\
-\antipode{(F_{i,\lambda})} &= E_{i,\lambda - \alpha_i}, \text{ and}\\
-\antipode{(1_\lambda)} &= 1_\lambda.
-\end{align*}
+For any $A\in\matrices$,
+\begin{equation*}
+\antipode{(\antipode{(e_A)})} = e_{(A^\transpose)^\transpose} = e_A,
+\end{equation*}
+so $\antipode{}\circ\antipode{}$ is the identity map on $\qschur$.
+
+For each $i\in\{1,\ldots,n\}$ and $\lambda\in\compositions$ with $\lambda_{i+1}>0$,
+\begin{equation*}
+\antipode{(E_{i,\lambda})} = F_{i,\lambda+\alpha_i},
+\end{equation*}
+for each $i\in\{1,\ldots,n\}$ and $\lambda\in\compositions$ with $\lambda_i>0$,
+\begin{equation*}
+\antipode{(F_{i,\lambda})} = E_{i,\lambda - \alpha_i}, \text{ and}
+\end{equation*}
+and
+\begin{equation*}
+\antipode{(1_\lambda)} = 1_\lambda,
+\end{equation*}
+for each $\lambda\in\compositions$.
 
 \subsection{Shifting and periodicity}
 
@@ -1685,16 +1708,93 @@ and set
 R=\sum_{\lambda\in\compositions} R_\lambda.
 \end{equation*}
 
-Observe that
+\begin{lemma}\label{lemma:action-of-R-generic}
+For each $A\in\matrices$,
 \begin{equation*}
-\antipode{(R_\lambda)} = e_{\lambda_1\elem{1}{0}+\cdots +\lambda_n\elem{n}{n-1}},
+R\ast e_A = e_{[1]A}
 \end{equation*}
-which is $e_{[-1]D_{[1]\lambda}}$ using the shift notation, so
+and
+\begin{equation*}
+e_A\ast R = e_{A[-1]}.
+\end{equation*}
+\end{lemma}
+
+\begin{proof}
+Lemma \ref{lemma:action-of-R} shows that the same formulas hold in $\qschur$, then the result follows for the generic multiplication $\ast$, since each product $R\ast e_A$ and $e_A \ast R$ is supported on one orbit, so the generic multiplication and the product on $\qschur$ are the same in this instance.
+\end{proof} 
+
+Observe that
+\begin{align*}
+\antipode{(R_\lambda)} &= e_{\lambda_1\elem{1}{0}+\cdots +\lambda_n\elem{n}{n-1}}\\
+&= e_{[-1]D_{[1]\lambda}}
+\end{align*}
+so
 \begin{equation*}
 \antipode{(R)} = \sum_{\lambda\in\compositions} e_{[-1]D_\lambda}.
 \end{equation*}
 
+\begin{lemma}\label{lemma:R-is-a-unit-generic}
+The element $R$ of $\generic$ is invertible, with
+\begin{equation*}
+R \ast\antipode{(R)} = 1 = \antipode{(R)}\ast R.
+\end{equation*}
+\end{lemma}
 
+\begin{proof}
+Lemma \ref{lemma:action-of-R-generic} shows that
+\begin{align*}
+R\ast \antipode{(R)} 1_\lambda &= R e_{[-1]D_{[1]\lambda}}\\
+&= e_{D_{[1]\lambda}}\\
+&= 1_{[1]\lambda}
+\end{align*}
+for each $\lambda\in\compositions$, so
+\begin{equation*}
+R \ast\antipode{(R)} = 1.
+\end{equation*}
+
+Similarly,
+\begin{align*}
+\antipode{(R)}\ast R &= \sum_{\lambda\in\compositions} e_{D_\lambda [1]}\ast R\\
+&= \sum_{\lambda\in\compositions} e_{D_\lambda}\\
+&= 1.
+\end{align*}
+\end{proof}
+
+Let $\tau$ be the $\integers$-algebra automorphism of $\generic$ given by conjugation by $R$, so
+\begin{align*}
+\tau(e_A) &= R\ast e_A \ast \antipode{(R)}\\
+&= R\ast e_A \ast R^{-1},
+\end{align*}
+for each $A\in\matrices$.
+
+Then $\tau$ has order $n$, since
+\begin{equation*}
+\tau^n{(e_A)} = e_{[n]A[n]} = e_A,
+\end{equation*}
+by the $n$-periodicity condition on $\matrices$.
+
+As in Lemma \ref{lemma:conjugation-by-R}, it follows from Lemma \ref{lemma:action-of-R-generic} that
+\begin{equation*}
+\tau{(E_{i,\lambda})} = E_{i-1,[1]\lambda}
+\end{equation*}
+for $i\in\{1,\ldots,r\}$ and $\lambda\in\compositions$ with $\lambda_{i+1}>0$,
+\begin{equation*}
+\tau{(F_{i,\lambda})} = F_{i-1,[1]\lambda}
+\end{equation*}
+for $i\in\{1,\ldots,n\}$ and $\lambda\in\compositions$ with $\lambda_i>0$, and
+\begin{equation*}
+\tau{(1_\lambda)} = 1_{[1]\lambda}
+\end{equation*}
+for $\lambda\in\compositions$.
+
+In particular,
+\begin{align*}
+\tau{(E_i)} &= E_{i-1}\\
+\tau{(F_i)} &= F_{i-1}
+\end{align*}
+for $i\in\{1,\ldots,r\}$.
+
+{\color{blue}As earlier, I can not be sure but I think this map $\tau$ is related to the Auslander-Reiten translation on the isomorphism classes of nilpotent representations of the cyclic quiver on $n$ vertices. The result that $\tau(E_i)=  E_{i-1}$ is consistent with the fact the A.R translation sends the simple representation at vertex $i$ to the simple representation at vertex $i-1$.}
 
 \section{Multiplicative bases in affine zero Schur algebras: motivating example}
 {\color{blue}
@@ -1795,7 +1895,7 @@ E_iFi - F_iE_i + \sum_{\lambda:\lambda_i = 0,\lambda_{i+1}>0} 1_\lambda - \sum_{
 
 In this case, the quiver $\presentationquiver[2,r]$ has vertices $\compositions[2,r]=\{(0,r), (1,r-1),\ldots, (r,0)\}$; adjacent vertices are connected by two pairs of arrows with opposite orientation: $(e_1,f_1)$ and $(e_2,f_2)$. The relations arising from $\generic[2,r]$ are of a more complicated form - in particular, the serre relations of total degree $3$ will not hold in this case - so this case will be treated separately and at a later date.
 
-Although, the presentation of the subalgebra of $\generic[2,r]$ spanned by the aperiodic distinguished basis elements by a quiver with relations is not strictly needed for our study here, since we are considering the case where $r<n$, and we have already seen concretely why $\generic[2,1]$ and $\zeroschur[2,1]$ are the same.
+However, the presentation of the subalgebra of $\generic[2,r]$ spanned by the aperiodic distinguished basis elements by a quiver with relations is not strictly needed for our study here, since we are considering the case where $r<n$, and we have already seen concretely why $\generic[2,1]$ and $\zeroschur[2,1]$ are the same.
 
 \chapter{Further directions}
 
